# OxidOS

./: Cargo.toml  build.rs  link.x
.cargo/: config.toml
src/: boot.s  main.rs
